--- a/DhairyaModule9/src/main/res/values/strings.xml
+++ b/DhairyaModule9/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
+<!-- Dhairya Pal N01576099 -->
+
 <resources>
     <string name="app_name">DhairyaLab9</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
