--- a/DhairyaModule9/src/main/res/values/strings.xml
+++ b/DhairyaModule9/src/main/res/values/strings.xml
@@ -4,12 +4,10 @@
     <string name="app_name">DhairyaLab9</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_title">Dhairya Pal</string>
+    <string name="nav_header_subtitle">n01576099@humber.ca</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
 </resources>
